Bug 283853 - The advanced slideshow "Ken Burns Effect" doesn't respect the setting of the loop checkbox [patch]
Summary: The advanced slideshow "Ken Burns Effect" doesn't respect the setting of the ...
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-Presentation (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-12 11:19 UTC by Lutz Mändle
Modified: 2016-07-16 05:11 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.0
Sentry Crash Report:


Attachments
fix for the "Ken Burns Effect" (2.96 KB, patch)
2011-10-12 11:19 UTC, Lutz Mändle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lutz Mändle 2011-10-12 11:19:32 UTC
Created attachment 64457 [details]
fix for the "Ken Burns Effect"

Version:           2.2.0 (using KDE 4.6.0) 
OS:                Linux

The advanced slideshow "Ken Burns Effect" doesn't respect the setting of the loop checkbox, therefore it is not possible to run the slideshow with the "Ken Burns Effect" forever.
This problem exists in all versions at least since 3 years.

Reproducible: Always

Steps to Reproduce:
Open the "Advanced slideshow" configuration screen (Alt-Shift-F9), mark the checkbox "Use OpenGL slideshow transitions", then choose "Ken Burns" in the combobox "Transition effect", mark the checkbox "Loop" and press the button "Start Slideshow". 

Actual Results:  
The slideshow ends after the first cycle.

Expected Results:  
The slideshow should run infinite.

The attached patch corrects this problem.
Comment 1 Andi Clemens 2011-10-25 13:05:35 UTC
Git commit 96c4e1a3fbbd75fbcf764cdd7bc9d98b103d5cbd by Andi Clemens.
Committed on 25/10/2011 at 15:04.
Pushed by aclemens into branch 'master'.

Applied patch by Lutz Maendle

BUG: 283853

M  +12   -4    advancedslideshow/plugin/imageloadthread.cpp
M  +2    -2    advancedslideshow/plugin/imageloadthread.h
M  +1    -1    advancedslideshow/widgets/slideshowkb.cpp

http://commits.kde.org/kipi-plugins/96c4e1a3fbbd75fbcf764cdd7bc9d98b103d5cbd