Applied patch by Lutz Maendle

BUG: 283853